--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,8 +1,9 @@
-.login {
-    /* center div */
-    display: flex;
-    flex: 1;
-    height: 50vh;
-    justify-content: center;
-    align-items: center;
+form{
+    /* background: rgba(0, 0, 0, .06); */
+    box-shadow: 0 2px 10px 0 #bfbfbf;    
+    padding: 1rem;
+}
+.login h1{
+    text-align: center;
+    margin-bottom: 1rem;
 }
