--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,6 +3,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: crimson;
 }
 
 header ul {
@@ -20,7 +21,7 @@ header ul li {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: white;
 }
 
 header h3 {
